--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "docker-secrets-nodejs",
+  "name": "@strong-roots-capital/docker-secrets-nodejs",
   "version": "1.0.4",
-  "description": "Small utility to get credential data from docker secrets or environment variables.",
-  "main": "dist/index.js",
+  "description": "Read secrets from docker-secrets or environment variables",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
-    "build": "tsc --module commonjs --target es6 --outDir ./dist ./src/*.ts",
-    "test": "mocha --recursive --require ts-node/register test/*"
+    "prepublishOnly": "npm run compile",
+    "compile": "npm run clean && tsc",
+    "clean": "rm -rf dist",
+    "test": "npm run lint && npm run mocha",
+    "mocha": "mocha --require ts-node/register test/test-*.ts",
+    "watch:mocha": "nodemon -e 'ts json' -x 'npm run mocha || true'",
+    "lint": "eslint --ext ts .",
+    "watch:lint": "nodemon -e 'ts js json' -x 'eslint --ext ts . || true'"
   },
+  "files": [
+    "dist/src/"
+  ],
   "keywords": [
     "docker",
     "secrets",
@@ -15,11 +25,20 @@
   "author": "Vincent Zhu",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/jasmine": "^2.8.6",
-    "@types/node": "^9.4.0",
+    "@types/node": "^11.13.8",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "chai": "^4.1.2",
+    "eslint": "^5.16.0",
     "mocha": "^5.0.0",
     "ts-node": "^4.1.0",
-    "typescript": "^2.7.1"
+    "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "debug": "^4.1.1",
+    "ow": "^0.12.0",
+    "supports-color": "^6.1.0"
   }
 }
