--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "debug": "^4.1.1",
     "ow": "^0.12.0",
     "supports-color": "^6.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
